# juicity-rs

./: Cargo.toml  README.md  build.sh
.github/workflows/: build.yml  gui.yml
client/: Cargo.toml
client/examples/: config.json
client/src/: client.rs  forwarder.rs  local.rs  main.rs
common/: Cargo.toml
common/src/: config.rs  consts.rs  crypto.rs  link.rs  protocol.rs
gui/: Cargo.toml  README.md  build.rs
gui/locales/: en.toml  zh-CN.toml
gui/macos/: bundle.sh
gui/src/: app.rs  config.rs  core.rs  i18n.rs  icon.rs  link.rs  main.rs  pac.rs  startup_dialog.rs  system_proxy.rs  tray.rs  util.rs
gui/windows/: bundle.sh
juicity-client/: Cargo.toml
juicity-client/src/: client.rs  forwarder.rs  local.rs  main.rs
juicity-common/: Cargo.toml  build.rs
juicity-common/src/: build_info.rs  crypto.rs  lib.rs  protocol.rs
juicity-server/src/: dialer.rs  inflight.rs  main.rs  server.rs  udp.rs  underlay_socket.rs
server/: Cargo.toml
server/examples/: config.json
server/src/: dialer.rs  inflight.rs  main.rs  server.rs  udp.rs  underlay_socket.rs
