[workspace]
resolver = "2"
members = [
    "gui",
    "common",
    "client",
    "server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["juicity-rs contributors"]
license = "GPL-3.0"
description = "A QUIC-based proxy tool (Rust rewrite of juicity)"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
quinn = "0.11.11"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
rcgen = "0.13"
base64 = "0.22"
sha2 = "0.10"
bytes = "1"
hex = "0.4"
rand = "0.8"
socket2 = "0.5"
# quinn-proto and quinn-udp versions are auto-resolved via Cargo.lock
async-trait = "0.1"
hkdf = "0.12"
tokio-util = { version = "0.7" }
qrcode = "0.14"
image = "0.25"
url = "2"
zeroize = "1"
