[package]
name = "juicity-client"
version.workspace = true
edition.workspace = true

[dependencies]
juicity-common = { path = "../common" }

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
webpki-roots.workspace = true
sha2.workspace = true
bytes.workspace = true
hex.workspace = true
rand.workspace = true
async-trait.workspace = true
base64.workspace = true
tokio-util.workspace = true
zeroize.workspace = true
socket2 = "0.6"
tikv-jemallocator = { workspace = true }
mimalloc = { workspace = true }
