[package]
name = "juicity-common"
version.workspace = true
edition.workspace = true

[build-dependencies]
chrono = "0.4"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
thiserror.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
bytes.workspace = true
rand.workspace = true
aes-gcm = { version = "0.10" }
chacha20poly1305 = { version = "0.10" }
hkdf = "0.12"
sha1 = "0.10"
anyhow.workspace = true
quinn.workspace = true
qrcode.workspace = true
image.workspace = true
url.workspace = true
rustls-pemfile.workspace = true
x509-parser = "0.16"
