[package]
name = "juicity-gui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
url.workspace = true
base64.workspace = true

gtk4 = { version = "0.9", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
directories = "5"
rust-i18n = "3"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.3"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = "0.24"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
resvg = "0.44"
