[package]
name = "juicity-server"
version.workspace = true
edition.workspace = true

[dependencies]
juicity-common = { path = "../common" }

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
webpki-roots.workspace = true
sha2.workspace = true
bytes.workspace = true
hex.workspace = true
rand.workspace = true
socket2.workspace = true
async-trait.workspace = true
mimalloc = "0.1"
indexmap = "2"
if-addrs = "0.13"
dialoguer = "0.11"
lru = "0.12"
